--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,11 +7,11 @@
 <div class="row">
     <div class="col-xs-12">
         <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-            <div class="pull-left">
+            <div class="float-left">
                 <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
                 <p class="list-group-item-text">{{ recipe.description }}</p>
             </div>
-            <span class="pull-right">
+            <span class="float-right">
                 <img class="img-responsive" alt="{{ recipe.name }}" [src]="recipe.imagepath" style="max-height: 50px;"> 
             </span>
         </a>
